--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,5 @@ path = "src/util/lib.rs"
 clap = { version = "4.1.4", features = ["derive"] }
 handlebars = { version = "4.3.7", features = ["dir_source"] }
 markdown = "1.0.0-alpha.10"
+serde = { version = "1.0.164", features = ["derive"] }
+serde_json = "1.0.97"
